# online-cinema

./: .env.example  .gitignore  Makefile  README.md  STRUCTURE.md  STRUCTURE.txt  docker-compose.yml
api-gateway/nginx/conf.d/: app.conf
docs/architecture/: ANALYTICS_SERVICE_SUMMARY.md  ARCHITECTURE.md  AUTH_SERVICE_SUMMARY.md  CATALOG_SERVICE_SUMMARY.md  PAYMENT_SERVICE_SUMMARY.md  SEARCH_SERVICE_SUMMARY.md  STREAMING_SERVICE_SUMMARY.md  USER_SERVICE_SUMMARY.md
docs/openapi/: analytics.yaml  auth.yaml  catalog.yaml  notification.yaml  payment.yaml  search.yaml  stream.yaml  user.yaml
etl/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
etl/airflow/dags/: fetch_external_metadata.py  sync_catalog_to_elasticsearch.py  video_transcoding.py
etl/celery-workers/: celeryconfig.py  worker.py
etl/celery-workers/tasks/: __init__.py  indexing.py  thumbnails.py  transcoding.py
infrastructure/docker/: docker-compose.yml
infrastructure/monitoring/clickhouse/: init.sql
infrastructure/monitoring/grafana/datasources/: datasources.yml
infrastructure/monitoring/pgadmin/: servers.json
infrastructure/monitoring/prometheus/: alerts.yml  prometheus.yml
scripts/: init-multiple-databases.sh
services/analytics-service/: .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  requirements.txt  test_events.py
services/analytics-service/app/: __init__.py  main.py
services/analytics-service/clickhouse/: schema.sql
services/analytics-service/tests/: __init__.py  test_api.py
services/auth-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
services/auth-service/app/: __init__.py  main.py
services/auth-service/migrations/: 001_create_users_table.sql  README.md
services/base-service-template/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
services/base-service-template/app/: __init__.py  main.py
services/base-service-template/app/api/: deps.py
services/base-service-template/app/api/v1/: __init__.py  router.py
services/base-service-template/app/api/v1/endpoints/: __init__.py  health.py
services/base-service-template/app/core/: __init__.py  config.py  middleware.py  security.py
services/base-service-template/app/db/: __init__.py  models.py  repositories.py  session.py
services/base-service-template/app/schemas/: __init__.py  common.py
services/base-service-template/app/services/: __init__.py  base_service.py
services/base-service-template/tests/: __init__.py  conftest.py  test_health.py
services/catalog-service/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
services/catalog-service/app/: __init__.py  main.py
services/catalog-service/migrations/: 001_create_tables.sql
services/notification-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  requirements.txt
services/notification-service/app/: __init__.py  main.py
services/notification-service/tests/: __init__.py  test_api.py
services/payment-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  requirements.txt
services/payment-service/alembic/: env.py
services/payment-service/app/: __init__.py  main.py
services/payment-service/tests/: __init__.py  test_api.py
services/search-service/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
services/search-service/app/: main.py
services/streaming-service/: .env.example  Dockerfile  README.md  docker-compose.yml  requirements.txt
services/streaming-service/app/: main.py
services/streaming-service/migrations/: 001_create_tables.sql
services/user-service/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
services/user-service/app/: __init__.py  main.py
services/user-service/migrations/: 001_create_tables.sql
shared/python-common/: .gitignore  MANIFEST.in  README.md  USAGE.md  __init__.py  example_app.py  pyproject.toml  requirements.txt
shared/python-common/middleware/: __init__.py  correlation_id.py  error_handler.py  rate_limiter.py
shared/python-common/tests/: test_middleware.py
shared/python-common/utils/: __init__.py  logger.py  metrics.py  tracer.py
(+110 files in other folders)
